added datagrid functionality

--- a/GradingSystem/App.config
+++ b/GradingSystem/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="MyDbConnectionString"
-			 connectionString="Server=(local);Database=GradingMS;Integrated Security=True;"
+			 connectionString="Server=DESKTOP-QRF1854\SQLEXPRESS;Database=GradingMS;Trusted_Connection=True;TrustServerCertificate=True;"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
