--- a/GradingSystem/GradingSystem.csproj
+++ b/GradingSystem/GradingSystem.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <None Remove="Resources\leadership.gif" />
     <None Remove="Resources\lecturer.gif" />
+    <None Remove="Resources\man.png" />
+    <None Remove="Resources\next.png" />
     <None Remove="Resources\student.gif" />
     <None Remove="Resources\teacher.png" />
     <None Remove="Resources\um-bg.jpg" />
@@ -36,6 +38,8 @@
   <ItemGroup>
     <Resource Include="Resources\leadership.gif" />
     <Resource Include="Resources\lecturer.gif" />
+    <Resource Include="Resources\man.png" />
+    <Resource Include="Resources\next.png" />
     <Resource Include="Resources\student.gif" />
     <Resource Include="Resources\teacher.png" />
     <Resource Include="Resources\um-bg.jpg" />
