Added More Functionality, Added Encoder Dashboard, Fix some validations

--- a/GradingSystem/GradingSystem.csproj
+++ b/GradingSystem/GradingSystem.csproj
@@ -48,6 +48,8 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="View\Encoder\Dialogs\" />
+    <Folder Include="View\Staff\Dialogs\" />
   </ItemGroup>
 
 </Project>
